--- a/style.less
+++ b/style.less
@@ -4069,6 +4069,9 @@ body.mdx-index-void.mdui-theme-layout-dark {
     white-space: nowrap;
     text-overflow: ellipsis;
 }
+.mdui-theme-layout-dark .mdui-table tfoot td, .mdui-table tfoot th {
+    color: rgba(255,255,255,.7);
+}
 .mdx-swiper {
     z-index: 4!important;
     position: absolute!important;
@@ -4156,15 +4159,6 @@ body.mdx-index-void.mdui-theme-layout-dark {
     .swiper-pagination {
         z-index: 3;
     }
-    .swiper-bottom-void {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 30%;
-        z-index: 2;
-        background: linear-gradient(180deg, rgba(247, 247, 247, 0) 0%, rgba(247, 247, 247, 1) 100%);
-    }
     &.slide-style-2, &.slide-style-3 {
         .swiper-wrapper .swiper-item .mdx-slide-content {
             background-image: linear-gradient(65deg, rgba(var(--mdx-theme-color-with-white-head), 1) 30%, rgba(var(--mdx-theme-color-with-white-head), .1) 80%);
@@ -4218,12 +4212,7 @@ body.mdx-first-simple .mdx-swiper .swiper-wrapper .swiper-item .mdx-slide-conten
     height: 25%;
     z-index: 2;
     pointer-events: none;
-    background: linear-gradient(180deg, rgba(247, 247, 247, 0) 0%, rgba(247, 247, 247, 1) 100%);
-}
-body.mdui-theme-layout-dark {
-    .swiper-bottom-void {
-        background: linear-gradient(180deg, rgba(48, 48, 48, 0) 0%, rgba(48, 48, 48, 1) 100%);
-    }
+    background: linear-gradient(180deg, rgba(var(--mdx-theme-color-with-white-head), 0) 0%, rgba(var(--mdx-theme-color-with-white-head), 1) 100%);
 }
 .mdx-first-simple .mdx-swiper {
     z-index: 2!important;
